--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,3 +38,86 @@
                 font-size: larger;
             }
 
+
+            .menup {
+                grid-area: menu-principal;
+                background-color:rgb(59, 59, 59);
+                height: 120vh;
+                display: flex;
+                flex-direction: column;
+            }
+            
+            .menup a {
+                color: white;
+                text-decoration: none;
+                padding: 2px;
+                
+            }
+            
+            .principal {
+                grid-area: principal;
+                display: grid;
+                grid-template-columns: 
+                1fr 1fr 1fr;
+                color: white;
+                justify-items: center;
+                height: 120vh;
+                  
+            }
+            
+            .card{
+                border-radius: 2%;
+                border: 1px solid white;
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: column;
+                align-items: center;
+                text-align: start;
+                justify-content: space-between;
+                width: 75%;
+                margin-top: 5%;
+                padding-bottom: 5%;
+                gap: 10px;
+               
+                
+            }
+            
+            .card img{
+                border-radius: 2%;
+                display: flex;
+                width: 100%;
+            
+            }
+            
+            .boton {
+                color: white;
+                background-color: orange;
+                border-radius: 5%;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-top: 5px;
+                padding-bottom: 5px;
+            
+            }
+            
+            .boton a {
+                color: white;
+                text-decoration: none;
+            }
+            
+            .grid-container {
+            background-color: black;
+            display: grid;
+            grid-template-areas: 
+            'cabecera cabecera '
+            'menu-principal principal';
+            grid-template-columns: 1fr 5fr;
+            grid-template-rows: 70px;
+            height: 500px;
+            
+            }
+            
+            body{
+                background-color: black;
+                
+            }
